feat: Add revision support to enquiries and update related entities (#43)
- Introduced EnquiryReviseRequest DTO for revising enquiries.
- Updated EnquiryResponse to include revision number and note.
- Modified Enquiry entity to support revision number and note.
- Added REVISED status to EnquiryStatus enum.
- Enhanced EnquiryRepository with a method to find max revision by enquiry number.
- Implemented reviseEnquiry method in EnquiryService to handle revisions.
- Updated Order and Quotation entities to include machining requirement and metal category.
- Adjusted mappers to accommodate new fields in Order and Quotation items.
- Enhanced email notifications to include total order weight and improved formatting.
- Added database migrations for new columns and constraints related to revisions and machining.